# todoapp

./: app.py  pyproject.toml
migrations/versions/: 8ebcc1e08841_.py
templates/: index.html
