[tool.poetry]
name = "todoapp"
version = "1"
description = "todo app project for alx udacity course"
authors = ["jjokah <johnjohnsonokah@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.0"
black = "^22.6.0"
pylint = "^2.14.5"
pycodestyle = "^2.9.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
